--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "musixguit.doc.tar.xz": c120de45ca4d5e0ac7ffd69c948f64c67abd2af2
-  "musixguit.tar.xz": 34f1f13c087df5dded622ed38071a670f4368926
+  musixguit.doc.r21649.tar.xz: a35174974046fd411ab8349e887a8dc653f4cf0b
+  musixguit.r21649.tar.xz: 849e20da329b02e1e7db0b21199019998d3e1f92
